=== master

* Rename Dataset#to_hash to #as_hash, and add #to_hash as an alias, to allow undefing #to_hash to fix ruby calling it implicitly (jeremyevans) (#1375)

* Handle PG* constants deprecated in pg 0.21.0 in the postgres adapter (jeremyevans) (#1377, #1378)

* Support :association_pks_use_associated_table association option in association_pks plugin (jeremyevans)

* Make pg_hstore extension reset hstore conversion proc when running Database#reset_conversion_procs (jeremyevans)

* Fix incorrect SQL used for inserting into a CTI subclass sharing the primary table when using the :alias option (jeremyevans)

=== 4.47.0 (2017-06-01)

* Deprecate pg_typecast_on_load plugin, only useful on deprecated do and swift adapters (jeremyevans)

* Deprecate association_autoreloading and many_to_one_pk_lookup plugins, which were made the default model behavior in Sequel 4 (jeremyevans)

* Deprecate setting invalid datasets for models unless required_valid_table = false (jeremyevans)

* Make Model.require_valid_table = true not raise for datasets where Database#schema raises an error but Dataset#columns works (jeremyevans)

* Make Database#with_server in the server_block extension accept a second argument for a different read_only shard (jeremyevans) (#1355)

* Make schema_dumper extension handle Oracle 11g XE inclusion of not null in the db_type (StevenCregan, jeremyevans) (#1351)

* Add Model.default_association_type_options for changing default association options per association type (jeremyevans)

* Add :materialized option to Database#views on PostgreSQL to return materialized views (Blargel) (#1348)

* Make defaults_setter plugin inherit custom default values when subclassing (jeremyevans)

=== 4.46.0 (2017-05-01)

* Recognize additional disconnect error on MySQL (jeremyevans)

* Deconstantize dataset SQL generation, speeding up ruby 2.3+, slowing down earlier versions (jeremyevans)

* Deprecate calling Dataset#set_graph_aliases before Dataset#graph (jeremyevans)
